--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,7 +48,7 @@
                 <p class="valuta"></p>
             </div>
             <button type="submit" class="btn-submit" id="btn-submit">Beregn</button>
-            End Price:<input type='text' value=''  id='endPrice'/>
+            End Price:<input type='text' value=''  id='endPrice' disabled/>
         </form>
         
     
@@ -66,7 +66,7 @@
 <!--   <script type="module" src="../script/Init/main.js"></script>
  -->  <script type="module" src="../script/Init/fetchDK.js"></script>
   <script type="module" src="../script/Init/fetchAll.js"></script>
-  <script type="module" src="../script/Config/index.js"></script>
+  <script type="module" src="../script/Config/main.js"></script>
 
 
 </body>
