--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,6 +36,10 @@
                 <option value="united-states">United States</option>
                 <option value="DK">Denmark</option>
             </select>
+            <select name="type" id="type" id="type">
+                <option value="procent">Som procent</option>
+                <option value="money">Som penge</option>
+            </select>
             <label for="start-year">Start dato</label>
     <!--         <input type="number" id="start-date" name="start-year"  placeholder="2010" required value='2012/1/1'>
      -->        <input type='text' value='2012/1/1' id='startDate'/>
@@ -67,6 +71,7 @@
  -->  <script type="module" src="../script/Init/fetchDK.js"></script>
   <script type="module" src="../script/Init/fetchAll.js"></script>
   <script type="module" src="../script/Config/main.js"></script>
+  <script type="module" src="../script/procentFetch.js"></script>
 
 
 </body>
